<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:id="@+id/card_view"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="wrap_content"
                                                   app:cardBackgroundColor="?attr/colorPrimaryDark"
                                                   app:cardCornerRadius="@dimen/default_corner_radius_card_view">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/parent_layout_product_item_full_width"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" android:background="@drawable/background_color_news_item">


        <TextView
...
